# FTP_Log_Analyzer

./: .gitignore  FTP-analysis.py  README.md  pyproject.toml  sample_ftp.csv  sample_ftp_all_ops.csv
App/AppInfo/: appinfo.ini  pac_installer_log.ini
App/Wireshark/: androiddump.html  capinfos.html  captype.html  ciscodump.html  dumpcap.html  editcap.html  etwdump.html  mergecap.html  mmdbresolve.html  randpkt.html  randpktdump.html  rawshark.html  release-notes.html  reordercap.html  sshdump.html  text2pcap.html  tshark.html  udpdump.html  wifidump.html  wireshark-filter.html  wireshark.html
App/Wireshark/Wireshark User's Guide/: AppToolscapinfos.html  AppToolsdumpcap.html  AppToolseditcap.html  AppToolsmergecap.html  AppToolsrawshark.html  AppToolsreordercap.html  AppToolstext2pcap.html  AppToolstshark.html  Ch80211Keys.html  ChAdvExpert.html  ChAdvFollowStreamSection.html  ChAdvTCPAnalysis.html  ChBuildInstallWinInstall.html  ChCapCaptureFiles.html  ChCapCaptureOptions.html  ChCustCommandLine.html  ChCustPreferencesSection.html  ChIOExportSection.html  ChIOFileSetSection.html  ChIOImportSection.html  ChMateGettingStarted.html  ChStatConversations.html  ChStatDNS.html  ChStatEndpoints.html  ChStatFlowGraph.html  ChStatHTTP.html  ChStatHierarchy.html  ChStatIOGraphs.html  ChStatNetPerfMeter.html  ChStatPacketLengths.html  ChStatRSerPool.html  ChStatResolvedAddresses.html  ChStatSRT.html  ChStatSummary.html  ChStatUDPMulticastStreams.html  ChTelLTE.html  ChTelPlayingCalls.html  (+11 more)
Data/: recent  recent_common
Data/settings/: WiresharkPortable64Settings.ini
(+11 files in other folders)
