[project]
name = "ftp-analysis"
version = "0.1.0"
description = "FTP traffic analysis script using PyShark"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyshark",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

